--- a/Frontend/Hotelier.WebUI/Hotelier.WebUI.csproj
+++ b/Frontend/Hotelier.WebUI/Hotelier.WebUI.csproj
@@ -23,11 +23,17 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\ApiConsume\Hotelier.DataAccessLayer\Hotelier.DataAccessLayer.csproj" />
     <ProjectReference Include="..\..\ApiConsume\Hotelier.EntityLayer\Hotelier.EntityLayer.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\files\" />
   </ItemGroup>
 
 </Project>
